Make tempo label smaller, but bold

--- a/app/src/main/res/layout/activity_visuals.xml
+++ b/app/src/main/res/layout/activity_visuals.xml
@@ -28,11 +28,12 @@
         android:layout_width="0dp"
         android:layout_height="245dp"
         android:fontFamily="@font/major_mono_display"
-        android:paddingTop="20dp"
+        android:paddingTop="50dp"
         android:text="0"
         android:textAlignment="center"
         android:textColor="@color/purple_200"
-        android:textSize="160sp"
+        android:textSize="120sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
